# fast-food-classifier

./: Makefile  README.md  pyproject.toml
notebooks/: 01-mf-example-sentiment-train.ipynb
