[tool.poetry]
name = "fast-food-classifier"
version = "0.1.0"
description = "Train a sentiment classifier that is specific to Burger King or Wendys"
authors = ["Brandwatch"]

[tool.poetry.dependencies]
python = "^3.11"

datasets = "^2.15.0"
ipywidgets = "^8.1.1"
jupyterlab = "*"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
torch = "^2.1.1"
transformers = {extras = ["torch"], version = "^4.35.2"}
typer = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pylint = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
